# Linear-Congruential-Algorithm

./: CMakeLists.txt  README.md  main_script.m  modinv.m
Src_C++/: main.cpp
